--- a/content/pages/error_handling.ipynb
+++ b/content/pages/error_handling.ipynb
@@ -34,9 +34,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n"
+     ]
+    }
+   ],
    "source": [
     "n = 0\n",
     "while n < 10:\n",
@@ -53,9 +70,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n"
+     ]
+    }
+   ],
    "source": [
     "for n in range(0,10):\n",
     "    print(n**2)"
@@ -65,16 +99,55 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The usefulnes of `while` loops arises from situations in which we aren't sure how many times the loop should execute. \n",
+    "The usefulnes of `while` loops arises from sitautions in which we aren't sure how many times the loop should execute. \n",
     "\n",
     "As a simple example, lets say that we want to print out all perfect squares less than 1000."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "100\n",
+      "121\n",
+      "144\n",
+      "169\n",
+      "196\n",
+      "225\n",
+      "256\n",
+      "289\n",
+      "324\n",
+      "361\n",
+      "400\n",
+      "441\n",
+      "484\n",
+      "529\n",
+      "576\n",
+      "625\n",
+      "676\n",
+      "729\n",
+      "784\n",
+      "841\n",
+      "900\n",
+      "961\n"
+     ]
+    }
+   ],
    "source": [
     "x = 0\n",
     "while x**2 < 1000:\n",
@@ -93,10 +166,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8192\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = 0\n",
+    "while 2**n < 10000:\n",
+    "    n +=1 \n",
+    "\n",
+    "print(2**(n-1))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -116,10 +203,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "528\n"
+     ]
+    }
+   ],
+   "source": [
+    "balance = 225000\n",
+    "rate = 0.003\n",
+    "pmt = 850\n",
+    "count = 0\n",
+    "\n",
+    "while balance > 0:\n",
+    "    balance = balance * (1 + rate) - pmt\n",
+    "    count += 1\n",
+    "    \n",
+    "print(count)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -130,10 +236,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "515.932909740989\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(balance + pmt)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -150,11 +266,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is your name? Robbie\n",
+      "Hello, Robbie!\n"
+     ]
+    }
+   ],
    "source": [
     "name = input(\"What is your name? \")\n",
     "print(\"Hello, \" + name + \"!\")"
@@ -169,9 +294,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I have selected a random number between 0 and 999, inclusive. Can you guess it?\n",
+      "Please enter guess number 1: 500\n",
+      "Your guess was too small.\n",
+      "Please enter guess number 2: 750\n",
+      "Your guess was too small.\n",
+      "Please enter guess number 3: 875\n",
+      "Your guess was too small.\n",
+      "Please enter guess number 4: 937\n",
+      "Your guess was too large.\n",
+      "Please enter guess number 5: 906\n",
+      "Your guess was too small.\n",
+      "Please enter guess number 6: 922\n",
+      "Your guess was too small.\n",
+      "Please enter guess number 7: 930\n",
+      "Your guess was too large.\n",
+      "Please enter guess number 8: 926\n",
+      "Your guess was too small.\n",
+      "Please enter guess number 9: 928\n",
+      "That's it! It took you 9 guesses to find the right answer.\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "n = random.choice(range(0, 1000))\n",
@@ -216,12 +367,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "143385193.8336325\n"
+     ]
+    }
+   ],
+   "source": [
+    "# K is the number whe want to take the square root of.\n",
+    "K = 734123454324\n",
+    "\n",
+    "# x will be equal to our first guess\n",
+    "x = 5\n",
+    "\n",
+    "# We will create a loop that runs 10 times, improving our guess each time.\n",
+    "for i in range(0,10):\n",
+    "    x = x - (x**2 - K) / (2*x)\n",
+    "    \n",
+    "print(x)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -234,10 +405,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "856810.0456483923\n"
+     ]
+    }
+   ],
+   "source": [
+    "# K is the number whe want to take the square root of.\n",
+    "K = 734123454324\n",
+    "\n",
+    "# x will be equal to our first guess\n",
+    "x = 5\n",
+    "\n",
+    "# We create a flag that tells us when to stop\n",
+    "keep_going = True\n",
+    "\n",
+    "\n",
+    "# We will create a loop that runs 10 times, improving our guess each time.\n",
+    "while (keep_going):\n",
+    "\n",
+    "    for i in range(0,10):\n",
+    "        x_old = x\n",
+    "        x = x - (x**2 - K) / (2*x)\n",
+    "        \n",
+    "        diff = x_old - x\n",
+    "        \n",
+    "        # We need to take the absolute value of diff\n",
+    "        if diff < 0:\n",
+    "            diff = -diff\n",
+    "        \n",
+    "        if(diff < 0.001):\n",
+    "            keep_going = False\n",
+    "            \n",
+    "print(x)"
+   ]
   }
  ],
  "metadata": {
