--- a/_sources/pages/strings.ipynb
+++ b/_sources/pages/strings.ipynb
@@ -6,18 +6,35 @@
    "source": [
     "# Strings\n",
     "\n",
-    "A string object is a piece of text, or in other words, a sequence of characters. When defining a string, we must put the characters that compose it inside either single or double quotes. These quotes are what allows Python to distinguish between a string and a command. \n",
+    "A **string** value represents a piece of text, or in other words, a sequence of characters. Strings can be used for a variety of applications, including storing a message to be provided to an end-user or storing text-based data, such as a user's name. In this chapter we will discuss how to create strings, how to extract information from a string value, and how to perform operations on strings. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Creating a String Value\n",
+    "\n",
+    "We form a string value in Python by using either a pair of single quotation marks or a pair of double quotation marks to surround the characters that compose the string. \n",
     "\n",
     "In the cell below, we define a string variable, with the value `\"Hello World!\"`, and we then print the result. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
    "source": [
-    "my_string = \"Hello world!\"\n",
+    "my_string = 'Hello world!'\n",
     "print(my_string)"
    ]
   },
@@ -25,16 +42,277 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The official name of the Python string type is `str`. We confirm this be calling `type()` on `my_string`. "
+    "We will now check the type of our variable `my_string`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(my_string))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The `len()` Function\n",
+    "\n",
+    "Python provides several built-in functions for working with strings. The first such function we will discuss is `len()`. The `len()` function accepts a string value as an input and returns the number of characters within that string. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "39\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 'There are 39 characters in this string.'\n",
+    "print(len(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Single Quotes versus Double Quotes\n",
+    "\n",
+    "As mentioned above, we can use either single quotes or double quotes when defining a string. Both techniques are illustrated in the cell below. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "type(my_string)"
+    "string1 = 'This is a valid string.'\n",
+    "string2 = \"This is also a proper string.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When Python first encounters a quotation mark within an expression, it interpret subsequent characters as being part of a string. It will continue to do so until it encounters another quotation mark of the same type used to start the string. \n",
+    "\n",
+    "One benefit of being able to use either single quotes or double quotes when creating strings is that it allows us a convenient way to create strings that themselves contain quotation marks or apostrophes as characters. For instance, assume that we want to create a variable containing the following string:\n",
+    "\n",
+    "    He yelled, \"I have had enough!\" before storming out of the room.\n",
+    "    \n",
+    "Since this string contains double quotes within it, we will run into difficulties if we attempt to define it using double quotes. This is demonstrated below. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-4965ff137a3f>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-9-4965ff137a3f>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    sentence = \"He yelled, \"I have had enough!\" before storming out of the room.\"\u001b[0m\n\u001b[1;37m                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = \"He yelled, \"I have had enough!\" before storming out of the room.\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The cell below resulted in a syntax error. Python got confused by the quotation marks in the middle of the string. When it encountered the second quotation mark, it believed that this was the end of the string, although that character was intended to be part of the string. \n",
+    "\n",
+    "There are a few ways to fix this. The simplest is to use single quotes to define the string. When Python encounters the first single quote, it knows that a string is being defined. It won't stop reading characters into the string until it hits another single quote. Any double quotes that it encounters along the way will be treated as inert characters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He yelled, \"I have had enough!\" before storming out of the room.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = 'He yelled, \"I have had enough!\" before storming out of the room.'\n",
+    "print(sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Escape Sequences\n",
+    "An **escape sequence** is a sequence of characters to which Python applies special meaning when they are encountered in a string. Several common escape sequences are listed below.\n",
+    "\n",
+    "| Escape Sequence  | Result |\n",
+    "|:---:|-----|\n",
+    "| **`\\'`**  | Inserts a single quote. |\n",
+    "| **`\\\"`**  | Inserts a double quote. |\n",
+    "| **`\\n`**  | Inserts a newline. |\n",
+    "| **`\\t`**  | Inserts a tab. |\n",
+    "| **`\\\\`**  | Inserts a backslash. |\n",
+    "\n",
+    "\n",
+    "**<font size=4>Quotation Marks</font>**\n",
+    "\n",
+    "For an example use case for escape sequences, assume that we want to define a variable containing the following string of characters: \n",
+    "\n",
+    "    He yelled, \"I've had enough!\" before storming out of the room.\n",
+    "    \n",
+    "As discussed previously, the presence of double quotes within the string prevents us from easily using double quotes to define the string. Furthermore, since the character for the apostrophe is the same as the character for a single quote, we are also unable to define our string by simply surrounding the text above with single quotes. One solution is to use an escape sequence for the apostrophe so that Python knows to interpret it as text. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "He yelled, \"I've had enough!\" before storming out of the room.\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentence = 'He yelled, \"I\\'ve had enough!\" before storming out of the room.'\n",
+    "print(sentence)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We could have escaped the double quotes within the string as well as the apostrophe. In this case, we could have used either single or double quotes to define our string. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<font size=4>New Lines**\n",
+    "\n",
+    "Next, we will demonstrate how to use the `\\n` escape sequence to insert a newline into a string. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "It was the best of times.\n",
+      "It was the worst of times.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tale2cities = \"It was the best of times.\\nIt was the worst of times.\"\n",
+    "print(tale2cities)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notice that we did not include a space after the `\\n` escape sequence in the cell above. Had we done so, Python would have printed the space at the beginning of the second line. This would have caused our two lines of text to not be aligned on the left. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**<font size=4>Tabs</font>**\n",
+    "\n",
+    "We can use `\\t` to insert tabs in our string. This can be used for indenting lines, or for aligning output. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regular.\n",
+      "\tIndented.\n",
+      "\t\tDouble indented.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Regular.\")\n",
+    "print(\"\\tIndented.\")\n",
+    "print(\"\\t\\tDouble indented.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The tab escape sequence can be used to align portions of multi-line output. The following example shows how we might use tabs to align columns in the printout of an employee database. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ID\tEmployee Name\tSalary\n",
+      "-------------------------------\n",
+      "107\tJane Doe\t$54,000\n",
+      "139\tJohn Smith\t$48,300\n",
+      "162\tPat Jones\t$52,500\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('ID\\tEmployee Name\\tSalary')\n",
+    "print('-------------------------------')\n",
+    "print('107\\tJane Doe\\t$54,000')\n",
+    "print('139\\tJohn Smith\\t$48,300')\n",
+    "print('162\\tPat Jones\\t$52,500')"
    ]
   },
   {
@@ -102,161 +380,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Single Quotes versus Double Quotes\n",
-    "\n",
-    "As mentioned above, we can also use single quotes when defining a string. The following definition of `my_string` is equivalent to the previous definition. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "my_string = 'Hello world!'\n",
-    "print(my_string)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "One benefit of being able to use either single quotes or double quotes when creating strings is that it allows us a convenient way to create strings that themselves contain quotes as characters. For instance, assume that we want to create a variable containing the following string:\n",
-    "\n",
-    "    He yelled, \"I have had enough!\" before storming out of the room.\n",
-    "    \n",
-    "The following attempt at creating this string will give us an error."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentence = \"He yelled, \"I have had enough!\" before storming out of the room.\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In the example above, Python got confused by the quotation marks in the middle of the string. When it encountered the second quotation mark, it believed that this was the end of the string, although this was intended to be part of the string. \n",
-    "\n",
-    "There are a few ways to fix this. The simplest is to use single quotes to define the string. When Python encounters the first single quote, it knows that a string is being defined. It won't stop reading characters into the string until it hits another single quote. Any double quotes that it encounters along the way will be treated as inert characters."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentence = 'He yelled, \"I have had enough!\" before storming out of the room.'\n",
-    "print(sentence)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Escape Sequences\n",
-    "An **escape sequence** is a sequence of characters that Python applies special meaning to when they are encountered in a string. Several common escape sequences are listed below.\n",
-    "\n",
-    "| Escape Sequence  | Result |\n",
-    "|:---:|-----|\n",
-    "| **`\\'`**  | Prints a single quote. |\n",
-    "| **`\\\"`**  | Prints a double quote. |\n",
-    "| **`\\n`**  | Inserts a newline. |\n",
-    "| **`\\t`**  | Inserts a tab. |\n",
-    "| **`\\\\`**  | Inserts a backslash. |\n",
-    "\n",
-    "For an example use case for escape sequences, assume that we want to define a variable containing the following string of characters: \n",
-    "\n",
-    "    He yelled, \"I've had enough!\" before storming out of the room.\n",
-    "    \n",
-    "As before, the presence of double quotes within the string prohibit us from being able to use double quotes to define the string. Furthermore, since the character for the apostrophe is the same as the character for a single quote, we are now no longer able to use single quotes to define our string. One solution is to use an escape sequence for the apostrophe so that Python knows to interpret it as text. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sentence = 'He yelled, \"I\\'ve had enough!\" before storming out of the room.'\n",
-    "print(sentence)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Had we wished, we could have escaped the double quotes within the string as well as the apostrophe. In this case, we could have used either single or double quotes to define our string. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can use the `\\n` escape sequence to insert a newline inside of a string. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "tale2cities = \"It was the best of times.\\nIt was the worst of times.\"\n",
-    "print(tale2cities)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We can use `\\t` to insert tabs in our string. This can be used for indenting lines, or for aligning output. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Regular.\")\n",
-    "print(\"\\tIndented.\")\n",
-    "print(\"\\t\\tDouble indented.\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The tab escape sequence can be used to align portions of multi-line output. The following example shows how we might use tabs to align columns in the printout of an employee database. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "print('ID\\tEmployee Name\\tSalary')\n",
-    "print('-------------------------------')\n",
-    "print('107\\tJane Doe\\t$54,000')\n",
-    "print('139\\tJohn Smith\\t$48,300')\n",
-    "print('162\\tPat Jones\\t$52,500')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Operations Involving Strings\n",
+    "## String Operations\n",
     "\n",
     "When appearing between numbers, the symbols `+`, `-`, `*`, `/`, and `**` perform the relevant arithmetic operations. However, these symbols can sometimes be used to combine instance of data types. We will see examples of this as we introduce new data types. The only one of these symbols that can be used between two strings is the `+` symbol. \n",
     "\n",
@@ -682,6 +806,15 @@
     "print(f'{fname1:<15}{lname1:<15}{num1:>6}')\n",
     "print(f'{fname2:<15}{lname2:<15}{num2:>6}')\n",
     "print(f'{fname3:<15}{lname3:<15}{num3:>6}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## String Indexing and Slicing\n",
+    "\n",
+    "substrings"
    ]
   }
  ],
