--- a/_sources/pages/while_loops.ipynb
+++ b/_sources/pages/while_loops.ipynb
@@ -58,13 +58,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -116,7 +109,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# While Examples"
+    "## While Examples"
    ]
   },
   {
@@ -315,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -329,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
