--- a/_sources/pages/booleans.ipynb
+++ b/_sources/pages/booleans.ipynb
@@ -41,13 +41,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "source": [
-    "# Comparison Operators\n",
+    "## Comparison Operators\n",
     "\n",
     "Provide provides many **comparison operators** for checking to see if certain relationships exist between two values. Each comparison operator will evaluate as single Boolean value. The most commonly used comparison operators are:\n",
     "\n",
@@ -513,7 +510,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -527,7 +524,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
